sevfruit-supplier-service: добавлен метод GET /shipment/{shipment_id}
