# sevfruit-supplier-service/src/main/java/com/sevfruit/service/ShipmentController.java
@@ -1,11 +1,17 @@
 package com.sevfruit.service;
 
 import java.util.List;
+import java.util.Locale;
+import java.util.Optional;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.MessageSource;
 import org.springframework.http.HttpStatus;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -26,6 +32,11 @@ import com.sevfruit.repo.ShipmentRepository;
 @RestController
 @RequestMapping(path = "/shipment")
 public class ShipmentController {
+	private static final Logger logger = LoggerFactory.getLogger(ShipmentController.class);
+	
+	@Autowired
+	private MessageSource msgSrc;
+
 	@Autowired
 	private ShipmentRepository shipmentRepository;
 	
@@ -41,6 +52,27 @@ public class ShipmentController {
 	public List<Shipment> getAll()
 	{
 		return shipmentRepository.findAll();
+	}
+	
+	/**
+	 * Заданная поставка <br/>
+	 * {@code curl H "Accept-Language: ru" -H "Api-Key: 12345" http://localhost:8080/shipment/1 | jq}
+	 * @param shipment_id
+	 * @param locale
+	 * @return
+	 */
+	@GetMapping("{shipment_id}")
+	public Shipment get(@PathVariable int shipment_id, Locale locale)
+	{
+		final Optional<Shipment> shipment = shipmentRepository.findById(shipment_id);
+		if (shipment.isPresent())
+		{
+			return shipment.get();			
+		} else
+		{
+			logger.error("ShipmentController.get(): shipment {} not found", shipment_id);
+			throw new ResponseStatusException(HttpStatus.NOT_FOUND, msgSrc.getMessage(ServiceMessages.ERROR_SHIPMENT_NOT_FOUND, new Integer[]{shipment_id}, locale));
+		}
 	}
 	
 	/**
@@ -61,7 +93,7 @@ public class ShipmentController {
 				shipment.getProducts().forEach(sp -> {
 					if (sp.getPriceProduct() != null)
 					{
-						shipmentProductRepository.save(new ShipmentProduct(newShipment, new PriceProduct(newShipment.getPrice().getId(), sp.getPriceProduct().getProduct().getId()), sp.getQuantity()));
+						shipmentProductRepository.save(new ShipmentProduct(newShipment, new PriceProduct(newShipment.getPrice_id(), sp.getPriceProduct().getProduct().getId()), sp.getQuantity()));
 					}
 				});
 			}
